Upgrade for MW 1.35 and add <googledocument>, replacing GoogleDocTag
Change-Id: I6f66eb23451ed55fcb6dd4f3dee5d8ef64da7ecf

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,9 +1,16 @@
 {
 	"@metadata": {
 		"authors": [
-			"Nischay Nahata"
+			"Nischay Nahata",
+			"Sanjay Thiyagarajan"
 		]
 	},
 	"googledoccreator": "GoogleDocCreator",
-	"GoogleDocCreator-desc": "{{desc|name=GoogleDocCreator|url=https://www.mediawiki.org/wiki/Extension:GoogleDocCreator}}"
+	"googledoccreator-desc": "{{desc|name=GoogleDocCreator|url=https://www.mediawiki.org/wiki/Extension:GoogleDocCreator}}",
+	"action-googledoccreator": "{{doc-action|googledoccreator}}",
+	"googledocs-success": "Success message after page creation",
+	"googledocs-enter-title": "Prompt for wiki page title field",
+	"googledocs-enter-authcode": "Prompt for google auth code",
+	"googledocs-get-authcode-btn": "Button label for getting auth code",
+	"googledocs-edit-summary": "Edit summary for google docs"
 }
