--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,9 +1,16 @@
 {
 	"@metadata": {
 		"authors": [
-			"Nischay Nahata"
+			"Nischay Nahata",
+			"Sanjay Thiyagarajan"
 		]
 	},
 	"googledoccreator": "GoogleDocCreator",
-	"GoogleDocCreator-desc": "The GoogleDocCreator extension lets you create a Google Doc and embeds it to a wiki page."
+	"googledoccreator-desc": "The GoogleDocCreator extension lets you create a Google Doc and embeds it to a wiki page.",
+	"action-googledoccreator": "create a Google Docs page",
+	"googledocs-success": "Page created successfully: ",
+	"googledocs-enter-title": "Enter wiki page title",
+	"googledocs-enter-authcode": "Enter auth code",
+	"googledocs-get-authcode-btn": "Click to get auth code",
+	"googledocs-edit-summary": "Created by GoogleDocCreator"
 }
